--- a/src/components/mainView/Card.module.css
+++ b/src/components/mainView/Card.module.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
 }
+
 .movie-info {
   width: 783px;
   height: 343px;
@@ -13,12 +14,14 @@
   border-left: none;
   border-radius: 0 10px 10px 0;
 }
+
 .title {
   font-size: 69px;
   color: black;
   position: relative;
   padding-bottom: 20px;
 }
+
 .title::after {
   content: "";
   position: absolute;
@@ -28,7 +31,34 @@
   height: 2px;
   background-color: #000;
 }
+
 .text {
   color: black;
   padding: 20px;
+}
+
+@media screen and (max-width: 380px) {
+  .main-card {
+    width: auto;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .movie-info {
+    display: none;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .title::after {
+    display: none;
+  }
+
+  .text {
+    padding: 10px;
+  }
 }
