--- a/src/components/cartelera/Cartelera.module.css
+++ b/src/components/cartelera/Cartelera.module.css
@@ -6,7 +6,6 @@
   justify-content: center;
   width: 100%;
 }
-
 .title {
   color: white;
   padding: 60px 0px 30px 60px;
@@ -57,4 +56,23 @@
   height: 30px;
   border-radius: 0 0 10px 10px;
   margin-top: -20px;
+}
+
+@media (max-width: 380px) {
+  .title {
+    font-size: 32px;
+    padding: 30px 0px 0px 30px;
+  }
+  .all-movies {
+    display: flex;
+    justify-content: center;
+    height: 500px;
+  }
+  .movie-image {
+    width: 161px;
+    height: 161px;
+  }
+  .all-movies .movie:nth-child(n + 3) {
+    display: none;
+  }
 }
