--- a/src/components/dejaTuOpinion/Form.module.css
+++ b/src/components/dejaTuOpinion/Form.module.css
@@ -1,8 +1,13 @@
 .form-container {
-  width: 500px;
+  width: 330px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
 }
+
 .form-cells {
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
